fix spacing between main section + header

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -55,6 +55,6 @@ main {
   }
 
   main {
-    margin-top: 150px;
+    margin-top: 113px;
   }
 }
